# walmart-replenishment-pipeline

./: .gitignore  AGENTS.md  ASSIGNMENT.md  LICENSE  PROCESS.md  README.md  data_dictionary.md  main.py  pyproject.toml
.claude/agents/: 1_eda_multiagent.md
.github/workflows/: ci.yml
agents/: 1_eda_multiagent.md  2_feature_engineer.md  3_ml_pipeline.md  4_leakage_auditor.md  5_mlops_ci.md  6_test_suite.md
data/: calendar.csv  stores.csv
eda/: main.py
eda/agents/: __init__.py  auditor.py  features.py  insights.py  ml_readiness.py  overview.py  profiling.py  quality.py  report.py  visuals.py
experiments/: forecasting_baselines.py
notebooks/: eda.ipynb
outputs/: audit_log.md  draft_analysis.md  ml_results.json  stats_raw.json
reports/: EDA_Report.html  EDA_Report.md
src/: __init__.py  data_processing.py  features.py  forecasting.py  metrics.py  models.py  pipeline.py
tests/: test_data_leakage.py  test_forecasting.py  test_metrics.py  test_model_gate.py  test_temporal_split.py
