[project]
name = "waltmart-forecast"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.7.0",
    "matplotlib>=3.11.1",
    "mlflow-skinny>=3.14.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "ruff>=0.15.22",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
